// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="sc-AxmLO kmtPrp"
  >
    <button
      class="sc-AxgMl fvnHkD"
      size="2"
      type="button"
    />
    <ul
      class="sc-fzozJi dqvYrE"
      data-testid="dropdown"
    />
  </div>
</div>
`;

exports[`renders dropdown 1`] = `
<div>
  <div
    class="sc-AxmLO kmtPrp"
  >
    <button
      class="sc-AxgMl fvnHkD"
      size="2"
      type="button"
    >
      <p
        class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-fzozJi efVIsU"
      data-testid="dropdown"
    >
      <a
        class="sc-AxhUy kKWhET"
        href="http://www.google.pl"
        size="2"
        target="_blank"
      >
        <div
          class="sc-AxirZ btYaIv sc-AxheI cZhjTr"
        >
          <test-file-stub
            image="test-file-stub"
          />
        </div>
        <p
          class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
        >
          I open Google in new tab
        </p>
      </a>
    </ul>
  </div>
</div>
`;
